chore: fix z-index to account and bag navbar

--- a/profiles/static/profiles/css/profile.css
+++ b/profiles/static/profiles/css/profile.css
@@ -37,6 +37,11 @@
     padding: 8px;
 }
 
+.wishlist-btn i {
+    color:red;
+    
+}
+
 /*my reviews section */
 .review-details-card {
 	padding: 20px;
