--- a/static/css/base.css
+++ b/static/css/base.css
@@ -12,6 +12,9 @@ body {
     min-height: 50vh; 
 }
 
+.account-dropdown {
+    z-index: 99999999999;
+}
 /*------ Hero Carousel------- */
 .c-item {
     height: 680px;
